crates/id_effect/tests/ui/define_capability_macro.rs
fn main() {
  id_effect::define_capability!(My, u32);
}
